<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto" android:title="@string/transcode_settings_title" settings:searchable="false">
    <org.nameless.custom.preference.SwitchPreference android:title="@string/transcode_user_control" android:key="transcode_user_control" settings:controller="com.android.settings.development.transcode.TranscodeUserControlPreferenceController"/>
    <org.nameless.custom.preference.SwitchPreference android:title="@string/transcode_enable_all" android:key="transcode_enable_all" settings:controller="com.android.settings.development.transcode.TranscodeGlobalTogglePreferenceController"/>
    <org.nameless.custom.preference.SwitchPreference android:title="@string/transcode_default" android:key="transcode_default" settings:controller="com.android.settings.development.transcode.TranscodeDefaultOptionPreferenceController"/>
    <org.nameless.custom.preference.SwitchPreference android:title="@string/transcode_notification" android:key="transcode_notification" settings:controller="com.android.settings.development.transcode.TranscodeNotificationPreferenceController"/>
    <org.nameless.custom.preference.SwitchPreference android:title="@string/transcode_disable_cache" android:key="transcode_disable_cache" settings:controller="com.android.settings.development.transcode.TranscodeDisableCachePreferenceController"/>
</PreferenceScreen>
