<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="36dp" android:layout_marginEnd="36dp">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="6dp">
        <TextView android:textSize="20sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex" android:layout_marginEnd="10dp"/>
        <EditText android:id="@+id/hex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hex_hint" android:maxLines="1" android:maxLength="7" android:inputType="text"/>
    </LinearLayout>
    <org.nameless.custom.colorpicker.ColorPickerView android:id="@+id/color_picker_view" android:tag="portrait" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/press_color_to_apply"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginBottom="10dp">
        <org.nameless.custom.colorpicker.ColorPickerPanelView android:id="@+id/old_color_panel" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="0.5"/>
        <TextView android:textSize="20sp" android:gravity="center" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/arrow_right"/>
        <org.nameless.custom.colorpicker.ColorPickerPanelView android:id="@+id/new_color_panel" android:layout_width="0px" android:layout_height="wrap_content" android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>
